--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ env_logger = "0.10"
 log = "0.4"
 wgpu = "0.18"
 pollster = "0.3.0"
- 
+bytemuck = { version = "1.12", features = [ "derive" ] }
+
 
