--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,12 @@ log = "0.4"
 wgpu = "0.18"
 pollster = "0.3.0"
 bytemuck = { version = "1.12", features = [ "derive" ] }
+anyhow = "1.0"
+cgmath = "0.18"
 
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
 
