--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ pollster = "0.3.0"
 bytemuck = { version = "1.12", features = [ "derive" ] }
 anyhow = "1.0"
 cgmath = "0.18"
+instant = "0.1.12"
 
 
 [dependencies.image]
