reorganized and made some instance gpu changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,13 @@
 		[
 			"./pygo/Cargo.toml"
 		],
-		".\\Cargo.toml"
+		".\\Cargo.toml",
+		"./Cargo.toml",
+		"./Cargo.toml",
+		"./Cargo.toml",
+		"./Cargo.toml",
+		"./Cargo.toml",
+		"./Cargo.toml",
+		"./Cargo.toml"
 	]
 }
