--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bytemuck = { version = "1.12", features = [ "derive" ] }
 anyhow = "1.0"
 cgmath = "0.18"
 instant = "0.1.12"
+noise = "0.9.0"
 
 
 [dependencies.image]
